# lol-patcher-status

./: .env.example  .gitignore  Dockerfile  README.md  discloud.config  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/: config.py  main.py
bot/cogs/: commands.py  patch_watcher.py
bot/database/: connection.py  models.py  repository.py
bot/models/: champion_change.py  guild_config.py  patch_record.py  stat_change.py
bot/services/: classifier.py  formatter.py  patch_differ.py  riot_data_source.py
bot/utils/: constants.py  logger.py
tests/: test_classifier.py  test_formatter.py  test_integration.py  test_patch_differ.py  test_riot_data_source.py
tests/fixtures/: patch_14_11_champions.json  patch_14_12_champions.json
