[project]
name = "lol-patch-watcher"
version = "0.1.0"
description = "Discord bot to watch LoL patch updates and notify buffs/nerfs"
authors = [{ name = "Antigravity AI", email = "ai@google.com" }]
dependencies = [
    "discord.py>=2.4.0",
    "riotwatcher>=3.2.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
